# FridayClub

./: SkipInput.py  Word_Guess.py  aidan.py  currentaccount.txt  login.py  menu.py  pyproject.toml
ai/: a.json  generate.py  main.py
data/: planets.py
games/: cataclone1.py  cookie.py  hangman.py  jd.py  murder.py  number.py  orc.py  spacetrails.py  sugar1.py  sw1r.py  sw2e.py  sw2eJD.py  translator.py  walker.py
hpgames/: elflife.py  hpapi.py  pf.py  sg.py
planet/: c.json  csvjson (3).json  main.py  merchandise.json  planets_final_final.json  ports.json  utils.py
users/: DJ_DeHao.txt  FireShadow700.txt  Hyperdraw.txt  JD.txt  PIG.txt  Potato.txt  af.txt  computer.txt  computer5.txt  evan.txt  hi.txt  pickle.txt  sid.txt
