[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "fridayclub"
version = "0.1.0"
[tool.poetry.dependencies]
asciimatics = "^1.11"
ghhu = "^0.1.0"
gtts = "^2.1"
pyfiglet = "^0.8.0"
python = "^3.8"
[tool.poetry.dev-dependencies]
